<?xml version="1.0"?>
<package>
  <name>livox_detection</name>
  <version>0.0.0</version>

  <description>
    Livox_detection
  </description>

  <maintainer email="QIAO003@e.ntu.edu.sg">livox_detection</maintainer>

  <license>BSD</license>

  <author email="QIAO003@e.ntu.edu.sg">livox_detection</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>


  <export>
  </export>
</package>
